. use Java 10 type inference